{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 34,
  "lineage": "6e00ca69-20a4-ee61-d541-e4e13d67307d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "my-ilb-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.10.30.5",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-04-27T11:18:00.395-07:00",
            "id": "projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/addresses/my-ilb-ip",
            "name": "my-ilb-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "qwiklabs-gcp-03-19b3588ba676",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/addresses/my-ilb-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/subnetworks/subnet-b",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/forwardingRules/tcp-content-rule"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-allow-health-checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-27T10:42:42.042-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-03-19b3588ba676/global/firewalls/fw-allow-health-checks",
            "log_config": [],
            "name": "fw-allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/global/networks/my-internal-app",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-19b3588ba676",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/global/firewalls/fw-allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "backend-service"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-allow-lb-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-04-27T10:42:41.897-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-03-19b3588ba676/global/firewalls/fw-allow-lb-access",
            "log_config": [],
            "name": "fw-allow-lb-access",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/global/networks/my-internal-app",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-19b3588ba676",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/global/firewalls/fw-allow-lb-access",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "backend-service"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "tcp-content-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "backend_service": "projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/backendServices/internal-tcp-backend",
            "creation_timestamp": "2023-04-27T11:50:46.565-07:00",
            "id": "projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/forwardingRules/tcp-content-rule",
            "ip_address": "10.10.30.5",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL",
            "name": "tcp-content-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/global/networks/my-internal-app",
            "network_tier": "PREMIUM",
            "ports": [
              "80"
            ],
            "project": "qwiklabs-gcp-03-19b3588ba676",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/forwardingRules/tcp-content-rule",
            "subnetwork": "subnet-b"
          },
          "dependencies": [
            "google_compute_address.my-ilb-ip",
            "google_compute_region_backend_service.internal-tcp-backend",
            "google_compute_region_health_check.my-ilb-health-check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "utility-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/zones/us-central1-f/disks/utility-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-03-19b3588ba676/zones/us-central1-f/instances/utility-vm",
            "instance_id": "2322876191220370172",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "CY8zB0NIOLI=",
            "name": "utility-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/global/networks/my-internal-app",
                "network_ip": "10.10.20.50",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/subnetworks/subnet-a",
                "subnetwork_project": "qwiklabs-gcp-03-19b3588ba676"
              }
            ],
            "project": "qwiklabs-gcp-03-19b3588ba676",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/zones/us-central1-f/instances/utility-vm",
            "service_account": [
              {
                "email": "1070616427275-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-health-checks"
            ],
            "tags_fingerprint": "DPTFiyF5goQ=",
            "zone": "us-central1-f"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "internal-tcp-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/zones/us-central1-a/instanceGroups/instance-group-1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/zones/us-central1-b/instanceGroups/instance-group-2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-04-27T10:59:59.928-07:00",
            "enable_cdn": false,
            "fingerprint": "TM6LUkMBQhQ=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/healthChecks/my-ilb-health-check"
            ],
            "id": "projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/backendServices/internal-tcp-backend",
            "load_balancing_scheme": "INTERNAL",
            "name": "internal-tcp-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/global/networks/my-internal-app",
            "project": "qwiklabs-gcp-03-19b3588ba676",
            "protocol": "TCP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/backendServices/internal-tcp-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_region_health_check.my-ilb-health-check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-27T10:42:42.515-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/routers/nat-router-us-central1",
            "name": "nat-router-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/global/networks/my-internal-app",
            "project": "qwiklabs-gcp-03-19b3588ba676",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-19b3588ba676/regions/us-central1/routers/nat-router-us-central1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-router-us-central1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-03-19b3588ba676/us-central1/nat-router-us-central1/nat-router-us-central1",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-router-us-central1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "qwiklabs-gcp-03-19b3588ba676",
            "region": "us-central1",
            "router": "nat-router-us-central1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.nat-router"
          ]
        }
      ]
    }
  ]
}